# Xfwm4CompositeEditor

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  config.h.in  configure  configure.ac  makepkg  remakesourcelist
Xfwm4CompositeEditor/: flagsandlibs
Xfwm4CompositeEditor/app/: Makefile.am  Makefile.in
Xfwm4CompositeEditor/debug/: Makefile.am
Xfwm4CompositeEditor/resources/man/: xfwm4compositeeditor.1
Xfwm4CompositeEditor/resources/pixmaps/: Xfwm4CompositeEditor.desktop
Xfwm4CompositeEditor/src/: internet.h  main.cpp
